--- a/Membina Currency/Views/Products/Index.cshtml
+++ b/Membina Currency/Views/Products/Index.cshtml
@@ -27,6 +27,7 @@
                 <td>@product.Size</td>
                 <td>@product.SgdPrice</td>
                 <td><a href="Products/View/@product.Id">View</a></td>
+                <td><a href="Products/Update/@product.Id">Update</a></td>
             </tr>
         }
     </tbody>
