--- a/Membina Currency/Views/Currencies/Add.cshtml
+++ b/Membina Currency/Views/Currencies/Add.cshtml
@@ -2,8 +2,9 @@
 @{
 
 }
+<div class="container">
 <h1>Add New Currency</h1>
-<form method="post" action="Add">
+    <form method="post" action="Add" class="container">
     <div class="mb-3">
         <label for="" class=" = " form-label">Currency Name</label>
         <input type="text" class="form-control" asp-for="Name">
@@ -17,5 +18,7 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+</div>
 
 
